Fix screen broken layout

--- a/portal/src/graphql/portal/AppsScreen.module.scss
+++ b/portal/src/graphql/portal/AppsScreen.module.scss
@@ -16,7 +16,6 @@
   display: flex;
   flex-wrap: wrap;
   margin: -7px;
-  width: 950px;
   padding-bottom: 30px;
 }
 
